--- a/hcanswd/Makefile
+++ b/hcanswd/Makefile
@@ -35,8 +35,7 @@ hcanswd: $(OBJ) libhcan++ libhcandata
 
 clean:
 	rm -f *.o
-	cd binary_$(ARCH); sudo rm -f hcanswd
-	#sudo rm -f -R binary_$(ARCH)
+	test -d ./binary_$(ARCH) && cd binary_$(ARCH); sudo rm -f hcanswd
 
 ctags:
 	ctags *.cc *.h ../libhcan++/*.cc ../libhcan++/*.h ../libhcandata/*.cc ../libhcandata/*.h
