--- a/libhcandata/Makefile
+++ b/libhcandata/Makefile
@@ -12,17 +12,17 @@ endif
 INC = -I.. -I. -I../include
 CXXFLAGS = -Wall -O2 $(INC) -g #-Werror 
 
-all: clean dep libhcandata.so.2.0
+all: clean dep libhcandata.so
 
 install:
-	sudo /usr/bin/install ./binary_$(ARCH)/libhcandata.so.2.0 /usr/lib
-	sudo ln -fs /usr/lib/libhcandata.so.2.0 /usr/lib/libhcandata.so.2
-	sudo ln -fs /usr/lib/libhcandata.so.2 /usr/lib/libhcandata.so
+	sudo /usr/bin/install ./binary_$(ARCH)/libhcandata.so /usr/lib
+	sudo ln -fs /usr/lib/libhcandata.so /usr/lib/libhcandata.so.2
+	sudo ln -fs /usr/lib/libhcandata.so /usr/lib/libhcandata.so.2.0
 
-libhcandata.so.2.0: $(OBJ)
-	$(CXX) -shared -o $@ -Wl,-soname,libhcandata.so.2 $(OBJ)
+libhcandata.so: $(OBJ)
+	$(CXX) -shared -o $@ -Wl,-soname,libhcandata.so $(OBJ)
 	test -d ./binary_$(ARCH) || mkdir binary_$(ARCH)
-	mv libhcandata.so.2.0 binary_$(ARCH)
+	mv libhcandata.so binary_$(ARCH)
 
 libhcandata.a: $(OBJ)
 	$(ARXX) rcs $@ $(OBJ)
@@ -33,7 +33,7 @@ $(OBJ): %.o:%.cc
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 
 clean:
-	sudo rm -f *.o ./binary_$(ARCH)/libhcandata.a ./binary_$(ARCH)/libhcandata.so.2.0
+	sudo rm -f *.o ./binary_$(ARCH)/libhcandata.*
 
 ctags:
 	ctags *.cc *.h
