changed path for libhcandata in Makefiles

--- a/hcanswd/Makefile
+++ b/hcanswd/Makefile
@@ -5,7 +5,7 @@ include ../ARCH.inc
 OBJ = main.o
 
 LD_FLAGS = -Wl,--export-dynamic \
-			-L ../libhcandata -lhcandata \
+			-L ../libhcandata/binary_$(ARCH) -lhcandata \
 			-L ../libhcan++/binary_$(ARCH) -lhcan++ \
 			-lboost_program_options \
 			-lboost_regex \
