--- a/hcanweb/server/C1612server/Makefile
+++ b/hcanweb/server/C1612server/Makefile
@@ -8,20 +8,19 @@ OBJ_LOCAL := $(patsubst %.c,%.o,$(wildcard *.c))
 .PHONY:	release
 
 #Der atmega644 hat die doppelte EEPROM- und SRAM-Groesse gegenueber dem atmega32.
-#export MCU = atmega32
-#export MCU = atmega644
+export MCU_Server = atmega644
 TARGET = main
-adr = 161
+adr = 166
 
-ifeq ($(MCU),atmega644)
+ifeq ($(MCU_Server),atmega644)
 	# atmega644 (64kbytes flash = 0 bis FFFF)
-	#JTAG-Enable: AVRDUDE_FLASH = avrdude -c avrispmkII -p m644p -P usb -e -U flash:w:"hcanBL_$(MCU)/$(TARGET).hex" -U hfuse:w:0x90:m -U lfuse:w:0xc7:m -U efuse:w:0xfc:m
-	AVRDUDE_FLASH = avrdude -c avrispmkII -p m644p -P usb -e -U flash:w:"C1612_$(MCU)/$(TARGET).hex" -U hfuse:w:0xD0:m -U lfuse:w:0xc7:m -U efuse:w:0xfc:m
+	#JTAG-Enable: AVRDUDE_FLASH = avrdude -c avrispmkII -p m644p -P usb -e -U flash:w:"hcanBL_$(MCU_Server)/$(TARGET).hex" -U hfuse:w:0x90:m -U lfuse:w:0xc7:m -U efuse:w:0xfc:m
+	AVRDUDE_FLASH = avrdude -c avrispmkII -p m644p -P usb -e -U flash:w:"C1612_$(MCU_Server)/$(TARGET).hex" -U hfuse:w:0xD0:m -U lfuse:w:0xc7:m -U efuse:w:0xfc:m
 else
 	# atmega32 (32kbytes flash = 0 bis 7FFF)
 	MT_BOOTLOADER_ADDRESS = 7000
-	#JTAG-Enable: AVRDUDE_FLASH = avrdude -c avrispmkII -p m32 -P usb -e -U flash:w:"hcanBL_$(MCU)/$(TARGET).hex" -U hfuse:w:0x80:m -U lfuse:w:0x0f:m
-	AVRDUDE_FLASH = avrdude -c avrispmkII -p m32 -P usb -e -U flash:w:"C1612_$(MCU)/$(TARGET).hex" -U hfuse:w:0xC0:m -U lfuse:w:0x0f:m
+	#JTAG-Enable: AVRDUDE_FLASH = avrdude -c avrispmkII -p m32 -P usb -e -U flash:w:"hcanBL_$(MCU_Server)/$(TARGET).hex" -U hfuse:w:0x80:m -U lfuse:w:0x0f:m
+	AVRDUDE_FLASH = avrdude -c avrispmkII -p m32 -P usb -e -U flash:w:"C1612_$(MCU_Server)/$(TARGET).hex" -U hfuse:w:0xC0:m -U lfuse:w:0x0f:m
 endif
 
 export CC = avr-gcc
@@ -44,12 +43,12 @@ export F_CPU  = 3686400
 export F_CAN   = 8000000
 export CAN_SPEED = 125000
 
-export DEFINES = -DMCU_$(MCU) \
+export DEFINES = -DMCU_$(MCU_Server) \
         -DF_CPU=$(F_CPU) -DF_CAN=$(F_CAN) -DCAN_SPEED=$(CAN_SPEED) \
         -DCANIX_SYSLOG -DCANIX_HMS -DCANIX_RTS \
         -DCANIX_EDS $(FEATURES)
 
-export GCCFLAGS = -mmcu=$(MCU) -Wall -Wstrict-prototypes -Os \
+export GCCFLAGS = -mmcu=$(MCU_Server) -Wall -Wstrict-prototypes -Os \
         -mcall-prologues \
         -std=gnu99
 
@@ -57,9 +56,9 @@ INC = -I./web -I. -I.. -I../../../canix -I../../.. -I../../../include
 CFLAGS= $(GCCFLAGS) $(INC) $(DEFINES)
 
 all: $(TARGET).hex
-	test -d ./C1612_$(MCU) || mkdir C1612_$(MCU)
-	sudo mv $(TARGET).hex C1612_$(MCU)
-	ls ./C1612_$(MCU)/*.*
+	test -d ./C1612_$(MCU_Server) || mkdir C1612_$(MCU_Server)
+	sudo mv $(TARGET).hex C1612_$(MCU_Server)
+	ls ./C1612_$(MCU_Server)/*.*
 
 $(TARGET).hex : $(TARGET).out
 	$(OBJCOPY) -R .eeprom -O ihex $(TARGET).out $(TARGET).hex 
@@ -72,7 +71,7 @@ clean:
 	rm -f *.o *.lst *.map *.out ../../../canix/*.o
 	rm -f ../*.o ../*.lst
 	rm -f ./web/*.o ./web/*.lst
-	sudo rm -f ./C1612_$(MCU)/*.hex
+	sudo rm -f ./C1612_$(MCU_Server)/*.hex
 
 ctags:
 	ctags *.c *.h ../../../canix/*.c ../../../canix/*.h ../../../include/*.h
@@ -82,10 +81,10 @@ load:
 	@echo -------------------------
 	@echo Bsp.:  make load adr=166
 	@echo -------------------------
-	telican -c $(adr) --arch $(MCU) -e "flash C1612_$(MCU)/$(TARGET).hex"
-	@#telican -a $(IP_HI) -c $(adr) --arch $(MCU) -e "flash C1612_$(MCU)/$(TARGET).hex"
+	telican -c $(adr) --arch $(MCU_Server) -e "flash C1612_$(MCU_Server)/$(TARGET).hex"
+	@#telican -a $(IP_HI) -c $(adr) --arch $(MCU_Server) -e "flash C1612_$(MCU_Server)/$(TARGET).hex"
 
 flash:
 	sudo $(AVRDUDE_FLASH)
 	#uisp -dlpt=/dev/parport0 --erase  -dprog=dapa
-	#uisp -dlpt=/dev/parport0 --upload if="hcanBL_$(MCU)/$(TARGET).hex" -dprog=dapa  -v=3 --hash=32
+	#uisp -dlpt=/dev/parport0 --upload if="hcanBL_$(MCU_Server)/$(TARGET).hex" -dprog=dapa  -v=3 --hash=32
