--- a/hcanhab/localhost/Makefile
+++ b/hcanhab/localhost/Makefile
@@ -2,11 +2,15 @@
 include $(HCANHAB_DIR)/MakefileDefines.inc
 
 all:
+	make cleanZielOrdner
 	make unzip_openhab_installation
 	make mv to=/home/$(ZIEL_USER)/$(ZIEL_ORDNER)
 	@#
 	cd $(HCANHAB_DIR); make installHabHcan
 
+cleanZielOrdner:
+	rm -f -R /home/$(ZIEL_USER)/$(ZIEL_ORDNER)
+	
 unzip_openhab_installation:
 	mkdir -p $(OPENHABDOWNLOADS_DIR)/tempinst
 	unzip -u $(OPENHABDOWNLOADS_DIR)/distribution-$(OPENHABVERSION)-runtime.zip \
@@ -40,7 +44,8 @@ reboot:
 
 start: 
 	make stop
-	sh /home/$(ZIEL_USER)/$(ZIEL_ORDNER)/start.sh # start_debug.sh
+	sh /home/$(ZIEL_USER)/$(ZIEL_ORDNER)/start.sh
+	@# sh /home/$(ZIEL_USER)/$(ZIEL_ORDNER)/start_debug.sh
 
 stop: 
 	# sh /home/$(ZIEL_USER)/$(ZIEL_ORDNER)/pskill
