C1612-Server: tuxgraphics TCP/IP stack 5th generation update: Version 5.7 to 5.10

--- a/hcanweb/server/C1612server/Makefile
+++ b/hcanweb/server/C1612server/Makefile
@@ -71,5 +71,5 @@ load:
 	@echo -------------------------
 	@echo Bsp.:  make load adr=166
 	@echo -------------------------
-	telican -c $(adr) --arch $(MCU_Server) -e "flash C1612_$(MCU_Server)/$(TARGET).hex"
+	telican -a $(IP_HI) -c $(adr) --arch $(MCU_Server) -e "flash C1612_$(MCU_Server)/$(TARGET).hex"
 	@#telican -a $(IP_HI) -c $(adr) --arch $(MCU_Server) -e "flash C1612_$(MCU_Server)/$(TARGET).hex"
