Altertivloesung fuer die .depend-Dateien

--- a/hcandq/Makefile
+++ b/hcandq/Makefile
@@ -35,6 +35,8 @@ hcandq: $(OBJ) libhcan++ libhcandata
 	mv $@ binary_$(ARCH)
 
 clean:
+	>.depend
+	make dep
 	rm -f *.o
 	sudo rm -f ./binary_$(ARCH)/hcandq
 
