--- a/libhcan++/Makefile
+++ b/libhcan++/Makefile
@@ -27,7 +27,7 @@ endif
 
 
 
-all: dep $(CONDITIONAL_CLEAN) $(TARGET).so
+all: $(CONDITIONAL_CLEAN) $(TARGET).so
 
 install:
 	/usr/bin/install ./binary_$(ARCH)/$(TARGET).so /usr/lib
@@ -48,6 +48,8 @@ $(OBJ): %.o:%.cc
 	$(CXX) $(CXXFLAGS) -o $@ -c $<
 
 clean:
+	>.depend
+	make dep
 	rm -f *.o
 	@echo last_ARCH=$(ARCH) > ARCH_letzter_Compilerlauf.inc
 	sudo rm -f ./binary_$(ARCH)/$(TARGET).*
