--- a/hcan4mqttc/Makefile
+++ b/hcan4mqttc/Makefile
@@ -1,4 +1,3 @@
-include ../hcanhab/MakefileDefines.inc
 include ../ARCH.inc
 include ARCH_letzter_Compilerlauf.inc
 
@@ -10,6 +9,8 @@ TARGET = hcan4mqttc
 OBJ = main.o mqttclient.o
 
 ifeq ($(ARCH),i386)
+	# sudo apt-get install llvm clang
+	#CXX = clang
 	CXX = gcc
 	LDFLAGS += -lmosquitto #-lpopt
 else
@@ -17,7 +18,7 @@ else
 	LDFLAGS += -lmosquitto
 endif
 
-CFLAGS = -O2 -I. -Wall -g #-DDEBUG0
+CFLAGS = -I. -Wall -g #-DDEBUG0 -O2
 CFLAGS += -DDEBUG
 
 all: $(CONDITIONAL_CLEAN) $(TARGET)
@@ -34,17 +35,23 @@ $(OBJ): %.o:%.c
 clean:
 	rm -f *.o $(TARGET)
 	@echo last_ARCH=$(ARCH) > ARCH_letzter_Compilerlauf.inc
-	sudo rm -f ./binary_$(ARCH)/$(TARGET)
+	rm -f ./binary_$(ARCH)/$(TARGET)
 
 ctags:
 	ctags *.c *.h
 
 install:
-	sudo install binary_$(ARCH)/$(TARGET) /usr/sbin
+	install binary_$(ARCH)/$(TARGET) /usr/sbin
 	
-bInstall:
-	$(_SCP) ./*.c $(SCP_ZIEL_DIR)/../openHCAN/$(TARGET)/
-	$(_SCP) ./*.h $(SCP_ZIEL_DIR)/../openHCAN/$(TARGET)/
-
 run: 
 	./binary_i386/$(TARGET) -D
+	
+ZIEL_PC = bananapi
+ZIEL_USER = tt
+ZIEL_ORDNER = myOpenHabInstallation
+_SCP = sshpass -p il scp -r
+SCP_ZIEL_DIR = $(ZIEL_USER)@$(ZIEL_PC):/home/$(ZIEL_USER)/$(ZIEL_ORDNER)
+bInstall:
+	$(_SCP) ./* $(SCP_ZIEL_DIR)/../openHCAN/$(TARGET)/
+	#$(_SCP) ./*.c $(SCP_ZIEL_DIR)/../openHCAN/$(TARGET)/
+	#$(_SCP) ./*.h $(SCP_ZIEL_DIR)/../openHCAN/$(TARGET)/
