Ubuntu 16.04 64-Bit: Als 64-Bit-Prozess fuehrt die Optimierung -O2 zum Segmentation fault.

--- a/libhcan++/Makefile
+++ b/libhcan++/Makefile
@@ -5,6 +5,7 @@ ifneq ($(ARCH),$(last_ARCH))
 	CONDITIONAL_CLEAN=clean	dep
 endif
 
+#DEBUG = aktiv
 TARGET = libhcan++
 OBJ = traceable_error.o frame.o frame_message_description.o \
       hcan_transport.o ihexfile.o \
@@ -15,18 +16,23 @@ OBJ = traceable_error.o frame.o frame_message_description.o \
 	  dynaddress.o utils.o oap_driver.o oap_access.o oap_desc.o 
 
 INC = -I.. -I. -I../include `pkg-config libxml++-2.6 --cflags`
-CXXFLAGS = -Wall -O2 $(INC) -fPIC
-# wegen deprecated auto_ptr:  CXXFLAGS += -Werror
 
 ifeq ($(ARCH),i386)	
-	CXX = g++
+	CXX = g++ #-m32
 	ARXX = ar
 else	
 	CXX = arm-linux-gnu-g++
 	ARXX = arm-linux-gnu-ar
 endif
 
+ifeq ($(DEBUG),aktiv)	
+	CXXFLAGS = -Wall -O0 -g $(INC) -fPIC
+else	
+	CXXFLAGS = -Wall -O0 $(INC) -fPIC
+	# als 64-Bit-Prozess fuehrt -O2 zum Segmentation fault:   CXXFLAGS = -Wall -O2 $(INC) -fPIC
 
+	# wegen deprecated auto_ptr:  CXXFLAGS += -Werror
+endif
 
 all: $(CONDITIONAL_CLEAN) $(TARGET).so
 
