Anpassung bei der Kalibrieung eines Rollladens

--- a/firmwares/controllerboard-1612-v01/Makefile
+++ b/firmwares/controllerboard-1612-v01/Makefile
@@ -42,7 +42,7 @@ CFLAGS= $(GCCFLAGS) $(INC) $(DEFINES)
 
 all: $(TARGET).hex
 	test -d ./C1612_$(MCU) || mkdir C1612_$(MCU)
-	sudo mv $(TARGET).hex C1612_$(MCU)
+	mv $(TARGET).hex ./C1612_$(MCU)/
 	ls ./C1612_$(MCU)/*.*
 
 $(TARGET).hex : $(TARGET).out
