--- a/tools/Makefile
+++ b/tools/Makefile
@@ -4,16 +4,22 @@ TARGET = hcan-backup-config hcan-discover hcan-restore-config
 
 .PHONY: all install
 
-all: replaceIP install
+all: 
+	make setEnvironment
+	make install
 
-replaceIP:
-	@cp ./$(TARGET) ./install
-	@find ./install/hcan-* -type f -exec sed -i "s/127.0.0.1/$(IP_HI)/g" {} \;
- 
 install:
-	cd ./install; sudo install $(TARGET) /usr/bin
-	@cd ./install; sudo rm -f $(TARGET)
+	sudo install $(TARGET) /usr/bin
+
+# Umgebungsvariable fuer telican setzen:
+setEnvironment:
+	cp ./bash_profile ~/.bash_profile
+	cp ./bash_profile ~/.xsessionrc
+	@find ~/.xsessionrc -type f -exec sed -i "s/127.0.0.1/$(IP_HI)/g" {} \;
+	@find ~/.bash_profile -type f -exec sed -i "s/127.0.0.1/$(IP_HI)/g" {} \;	
+	@#less ~/.bash_profile
+	@#less ~/.xsessionrc
+	
 
 clean:
-	cd ./install; sudo rm -f $(TARGET)
 	cd /usr/bin/; sudo rm -f $(TARGET)
